# spdlog

./: CMakeLists.txt  CMakeLists.txt.cache  conandata.yml
demo/: CMakeLists.txt  test1.cpp
include/spdlog/: common-inl.h  common.h  cxlog.h  cxlog_macro.h  logger.h
include/spdlog/details/: file_helper-inl.h  registry-inl.h
include/spdlog/fmt/bundled/: core.h  format-inl.h
include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  wincolor_sink-inl.h
src/: CMakeLists.txt  cxlog.cpp
src/include/spdlog/: cxlog.h
src/src/: cxlog.cpp
